--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "whatsapp-flowbuilder",
   "version": "1.0.0",
-  "description": "WhatsApp Chatbot Flow Builder",
+  "description": "A React-based flow builder for WhatsApp chatbots",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "react",
-    "whatsapp",
-    "chatbot",
-    "flowbuilder"
-  ],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -28,7 +23,7 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
-    "webpack": "^5.88.0",
+    "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
